--- a/views/led.jade
+++ b/views/led.jade
@@ -1,4 +1,4 @@
 div
 	form(name='pick-color', action='/led', method='post')
-		input(name='color', type='color', value='#{ color }')
+		input(name='color', type='color', value='#{ led.color.toHexString() }')
 		input(type='submit', value='Update Color')
