--- a/views/base.jade
+++ b/views/base.jade
@@ -8,3 +8,7 @@ html
 			link(rel='stylesheet', href='/css/styles.css', type='text/css')
 	body
 		block content
+
+		block javascript
+			script(type='text/javascript' src='/socket.io/socket.io.js')
+			script(type='text/javascript' src='/js/socketTest.js')
