--- a/views/base.jade
+++ b/views/base.jade
@@ -11,4 +11,5 @@ html
 
 		block javascript
 			script(type='text/javascript' src='/socket.io/socket.io.js')
+			script(type='text/javascript' src='/bower/jquery/dist/jquery.min.js')
 			script(type='text/javascript' src='/js/socketTest.js')
