Made a basic socket application. Clicking a square (which represents an LED) will emit the index to the server. Turned hello-world.coffee into bootstrap.coffee, which bootstraps the controller modules and the socket modules.

--- a/views/led-rope.jade
+++ b/views/led-rope.jade
@@ -12,5 +12,5 @@ block append css
 block content
 	ul.led-rope
 		- for (var i = 0; i < ledRope.length(); i++)
-			li.led
+			li.led('data-index' = i)
 				+led(ledRope.leds[i])
