--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,15 @@
 ul.led-rope {
 	list-style-type: none;
 }
+
+ul.led-rope li {
+	display: inline-block;
+	height: 40px;
+	padding: 1px;
+	width: 40px;
+}
+
+ul.led-rope li div {
+	height: 100%;
+	width: 100%;
+}
