--- a/views/led-mixin.jade
+++ b/views/led-mixin.jade
@@ -1,5 +1,6 @@
 mixin led(led)
-	div
-		form(name='pick-color', action='/led', method='post')
-			input(name='color', type='color', value='#{ led.color.toHexString() }')
-			input(type='submit', value='Update Color')
+	div(style=('background-color:' + '#{ led.color.toHexString() }'))
+
+		//- form(name='pick-color', action='/led', method='post')
+		//-	input(name='color', type='color', value='#{ led.color.toHexString() }')
+		//-	input(type='submit', value='Update Color')
