Made a basic dashboard for controlling the colors of a single LED rope. It works end-to-end with the arduino. Began modeling the dashboard for a full LED table.

--- a/views/base.jade
+++ b/views/base.jade
@@ -6,10 +6,12 @@ html
 		//- css
 		block css
 			link(rel='stylesheet', href='/css/styles.css', type='text/css')
+			link(rel='stylesheet', href='/bower/spectrum/spectrum.css')
 	body
 		block content
 
 		block javascript
-			script(type='text/javascript' src='/socket.io/socket.io.js')
 			script(type='text/javascript' src='/bower/jquery/dist/jquery.min.js')
+			script(type='text/javascript' src='/bower/spectrum/spectrum.js')
+			script(type='text/javascript' src='/socket.io/socket.io.js')
 			script(type='text/javascript' src='/js/socketTest.js')
