--- a/views/led-mixin.jade
+++ b/views/led-mixin.jade
@@ -1,2 +1,2 @@
 mixin led(led)
-	input(name='color', type='color', value='#{ led.color.toHexString() }')
+	input.led(name='color', type='color', value='#{ led.color.toHexString() }')
