--- a/views/led-table-frame.jade
+++ b/views/led-table-frame.jade
@@ -6,6 +6,6 @@ block append css
 //- Include page specific css here.
 
 block content
-	div.table-frame.wood-grain
-		div.table
+	center
+		div#table-container
 			block table
