--- a/views/base.jade
+++ b/views/base.jade
@@ -7,7 +7,7 @@ html
 		block css
 			link(rel='stylesheet', href='/css/styles.css', type='text/css')
 			link(rel='stylesheet', href='/bower/spectrum/spectrum.css')
-	body
+	body.wood-grain
 		block content
 
 		block javascript
